tailwind_error.txt

> app-territorios@2.3.9.2 build:css
> tailwindcss -i ./src/input.css -o ./styles.css --minify

D:\_CODE\app-territorios\node_modules\tailwindcss\lib\value-parser\stringify.js:29
    if (Array.isArra"use strict";
                    ^^^^^^^^^^^^

SyntaxError: Unexpected string
    at wrapSafe (node:internal/modules/cjs/loader:1692:18)
    at Module._compile (node:internal/modules/cjs/loader:1735:20)
    at Object..js (node:internal/modules/cjs/loader:1893:10)
    at Module.load (node:internal/modules/cjs/loader:1481:32)
    at Module._load (node:internal/modules/cjs/loader:1300:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:245:24)
    at Module.require (node:internal/modules/cjs/loader:1504:12)
    at require (node:internal/modules/helpers:152:16)
    at Object.<anonymous> (D:\_CODE\app-territorios\node_modules\tailwindcss\lib\value-parser\index.js:4:17)

Node.js v24.12.0
